# repo-guardian

./: CLAUDE.md  Cargo.toml  README.md  config.toml.example
.github/workflows/: deploy.yml
scripts/: deploy.sh
src/: config.rs  guardian.rs  main.rs  pipeline.rs  repos.rs  state.rs  webhook.rs
src/github/: client.rs  mod.rs  payload.rs
